--- a/converter.css
+++ b/converter.css
@@ -43,6 +43,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-item: center;
     margin-top: 10px;
 }
 
